# arknights

./: .env.example  .gitignore  Cargo.toml  Cross.toml  README.md  README.zh-CN.md  index.html
scripts/: release.sh
src/: command.rs  command_tests.rs  kv_service.rs  kv_service_tests.rs  main.rs  main_tests.rs  test_support.rs
src/agent/: mod.rs  notify_check.rs  notify_check_tests.rs  personal.rs  personal_tests.rs  plan.rs  plan_tests.rs  re_act.rs
src/command/: command.rs  command_tests.rs  mod.rs
src/dao/: base_dao.rs  base_dao_tests.rs  chat_history_dao.rs  chat_history_dao_tests.rs  chat_history_vec_dao.rs  chat_history_vec_dao_tests.rs  kv_dao.rs  kv_dao_tests.rs  mod.rs  timer_dao.rs  timer_dao_tests.rs
src/dao/kv_dao/: tests.rs
src/dao/schedule/: mod.rs  models.rs  queries.rs  schedule_dao_tests.rs  schedule_test_support.rs
src/dao/timer/: mod.rs  models.rs  queries.rs  timer_dao_tests.rs
src/im/: base_im.rs  lark.rs  lark_tests.rs  mod.rs
src/kv/: kv_service.rs  kv_service_tests.rs  mod.rs
src/llm/: base_llm.rs  base_llm_tests.rs  deep_seek.rs  mod.rs
src/memory/: chat_history_dao.rs  chat_history_service.rs  chat_history_service_tests.rs  mod.rs  rag_embedder.rs  rag_embedder_tests.rs
src/schedule/: mod.rs  schedule_service.rs
src/timer/: mod.rs  timer_service.rs  timer_service_tests.rs
src/tool/: base_tool.rs  internet.rs  memory.rs  memory_tests.rs  mod.rs  process_control.rs  system.rs
src/tool/browser/: chromiumoxide_driver.rs  chromiumoxide_driver_tests.rs  click.rs  close.rs  (+15 more)
src/util/: http_utils.rs  http_utils_tests.rs
(+24 files in other folders)
