[package]
name = "arknights"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
# request
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
# time
chrono = "0.4"
cron-lite = "0.3"
# async
async-trait = "0.1"
futures = "0.3.32"
# exception
anyhow = "1.0"
tracing-appender = "0.2.4"
# lark
open-lark = { git = "https://github.com/foxzool/open-lark", features = ["websocket"] }
# db
rusqlite = { version = "0.39.0", features = ["trace", "bundled"] }
sqlite-vec = "0.1.7"
zerocopy = "0.8"
# rag
fastembed = "5.13.0"
rand = "0.9.2"
